manifests/wallet/service.yml
apiVersion: v1
kind: Service
metadata:
  name: wallet-svc
spec:
  selector:
    app: wallet-app
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 8000
  type: ClusterIP
